<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".presentation.view.fragment.ManageTaskFragment">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/label_task_title"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextWriters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_task_description"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_task_observations"
        android:inputType="text"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/label_new_tasks"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpdateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/label_save_update"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDeleteTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/label_delete_task"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>